--- a/ilaiwrighttypeposter/styles.css
+++ b/ilaiwrighttypeposter/styles.css
@@ -5,7 +5,7 @@
 /*define the basic settings for the page*/
 body {
     font-family: clarendon-urw, serif;
-    font-size: 16px;
+    font-size: 20px;
     color: #a4caa6;
     line-height: 22px;
     background-color: #012500;
@@ -13,6 +13,15 @@ body {
 
 }
 /* Style the header */
+p {
+  padding-left: 5%;
+  padding-right: 5%;
+  padding-top: 1%;
+  font-family: clarendon-urw, serif;
+    font-size: 20px;
+    color: #a4caa6;
+}
+
 
 header {
   color: #012500; /* This is the text color*/
@@ -26,6 +35,7 @@ header {
   float: left;
   width: 50%;
   padding: 5%;
+
 }
 .name {
   float: left;
@@ -58,34 +68,32 @@ h1 {
   font-weight: 500px;
   font-style: normal;
   font-size: 1000px;
-  line-height: 600px;
+  line-height: 0px;
   text-align: center;
-  margin-top: 0;
+  padding-bottom: -10%;
+  margin-top: 10%;
 
  }
 
 h2 { 
-	font-weight: 300;
+	font-family: job-clarendon, serif;
+  font-weight: 700;
+  font-style: italic;
+  color: #ffffff;font-weight: 300;
   font-size: 40px;
-  color: #ffffff;
   line-height: 44px;
   border-bottom: 1px dotted #a4caa6;
 
 }
 
 h3 { 
-  text-transform: uppercase;
+  text-transform: none;
   color: #ffffff;
-  letter-spacing: px;
+  letter-spacing: 25px;
   font-weight: 400;
   font-size: 50px;
   text-align: center;
-  padding: 70px 0;	
-  
-
-
-
-
+  text-shadow: 1px 1px 2px black, 0 0 25px #a4caa6, 0 0 5px #012500;
   }
 
 /*you can apply styling to multiple elements by separating them with a comma*/
@@ -107,23 +115,78 @@ ol {
   color: rgb(164, 202, 166);
 }
 
+.clarendonurwextrawide {
+    font-family: clarendon-urw-extra-wide, serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 16px;
+    color: #ffffff;
+}
+
+.clarendontextpro {
+    font-family: clarendon-text-pro, serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 16px;
+    color: #ffffff;
+}
+
+.clarendonurwextranarrow {
+  font-family: clarendon-urw-extra-narrow, serif;
+  font-weight: 300;
+  font-style: normal;
+  font-size: 16px;
+  color: #ffffff;
+}
+
+.jobclarendon {
+  font-family: job-clarendon, serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 16px;
+  color: #ffffff;
+}
+
+.jobclarendonbold {
+  font-family: job-clarendon, serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 16px;
+  color: #ffffff;
+}
+
+.center {
+  padding: 100px 0;
+  text-align: center;
+}
+
 
 /* define a style for section elements*/
 
-aside {
-	font-weight: 300; /*setting a light version of the font quiet sans*/
-  font-style: normal;
-  font-size: 20px;
-  line-height: 20px;
-  color: #ffffff;
-  padding: 50%;
-}
+/* aside {
+
+} */
 /* you can target a specific tag within another element*/
 footer p {
   text-align: center;
   font-size: 100px;
   line-height: 100px;
   color: #ffffff;
+  text-shadow: 1px 1px 2px black, 0 0 25px #a4caa6, 0 0 5px #012500;
+  margin-bottom: 20%;
+}
 
+.textshadow {
+  text-shadow: 1px 1px 2px black, 0 0 25px #a4caa6, 0 0 5px #012500;
+}
+
+p.a {
+  text-align-last: center;
+  font-size: 28px;
+  line-height: 50px;
+  font-family: clarendon-text-pro, serif;
+  font-style: normal;
 
 }
+
+
