--- a/ilaiwrighttypeposter/styles.css
+++ b/ilaiwrighttypeposter/styles.css
@@ -89,6 +89,7 @@ h2 {
 h3 { 
   text-transform: none;
   color: #ffffff;
+  font-family: job-clarendon, serif;
   letter-spacing: 25px;
   font-weight: 400;
   font-size: 50px;
