--- a/ilaiwrighttypeposter/styles.css
+++ b/ilaiwrighttypeposter/styles.css
@@ -92,6 +92,7 @@ h3 {
   letter-spacing: 25px;
   font-weight: 400;
   font-size: 60px;
+  line-height: 65px;
   text-align: center;
   text-shadow: 1px 1px 2px black, 0 0 25px #a4caa6, 0 0 5px #012500;
   }
